# eccpp

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  common.hpp  libsecp256k1_sign.cpp  libsodium_sign.cpp  openssl_sign.cpp
include/: ed25519.hpp  internal.h  key_generate.hpp  key_pair_generate.hpp  pk.hpp  signature.hpp  sk.hpp  status_code.hpp  x25519.hpp
src/: ed25519.cpp  internal.c  key_pair_generate.cpp  x25519.cpp
unit/: CMakeLists.txt
